--- a/files/cart.html
+++ b/files/cart.html
@@ -43,7 +43,7 @@
             
 <div class="cartsitems">
     <div class="cartsitem">
- <img src="../imgs/item-8.jpg" alt="">
+ <img src="../shoes/item-6.jpg" alt="">
  <p>White Men's Sneakers  <br> <br> size 34</p>
  <p> ksh. 2000</p>
  <form action="">
@@ -56,7 +56,7 @@
  
     </div>
     <div class="cartsitem">
-        <img src="../imgs/item-8.jpg" alt="">
+        <img src="../shoes/item-8.jpg" alt="">
         <p>White Men's Sneakers  <br> <br> size 34</p>
         <p> ksh. 2000</p>
         <form action="">
@@ -70,7 +70,7 @@
         </div>
 
     <div class="cartsitem">
-            <img src="../imgs/item-8.jpg" alt="">
+            <img src="../shoes/item-16.jpg" alt="">
             <p>White Men's Sneakers  <br> <br> size 34</p>
             <p> ksh. 2000</p>
             <form action="">
