--- a/files/checkout.html
+++ b/files/checkout.html
@@ -76,19 +76,19 @@
                     <h2>oder summary</h2>
   <div class="shoes">
     <div class="shoe1">
-        <img src="../imgs/item-8.jpg" alt="">
+        <img src="../shoes/item-8.jpg" alt="">
         <p>leather men shoes <span>ksh. 2300</span><br> 23  </p>
     </div>
     <div class="shoe1">
-        <img src="../imgs/item-13.jpg" alt="">
+        <img src="../shoes/item-13.jpg" alt="">
         <p>leather men shoes <span>ksh. 2300</span><br> 23  </p>
     </div>
     <div class="shoe1">
-        <img src="../imgs/item-4.jpg" alt="">
+        <img src="../shoes/item-4.jpg" alt="">
         <p>leather men shoes <span>ksh. 2300</span><br> 23  </p>
     </div>
     <div class="shoe1">
-        <img src="../imgs/item-6.jpg" alt="">
+        <img src="../shoes/item-6.jpg" alt="">
         <p>leather men shoes <span>ksh. 2300</span><br> 23  </p>
     </div>
   </div>
