--- a/files/list.html
+++ b/files/list.html
@@ -44,7 +44,7 @@
             <!-- <i class="fa-solid fa-trash"></i> -->
            <div class="container">
   <div class="gallery">
-    <img src="../imgs/item-13.jpg" alt="">
+    <img src="../shoes/item-13.jpg" alt="">
     <div class="desc">
         <h2>product name</h2>
         <p class="size">size <span>23</span></p>
@@ -60,7 +60,7 @@
   
 
   <div class="gallery">
-    <img src="../imgs/item-16.jpg" alt="">
+    <img src="../shoes/item-16.jpg" alt="">
     <div class="desc">
         <h2>product name</h2>
         <p class="size">size <span>23</span></p>
@@ -75,7 +75,7 @@
   </div>
 
   <div class="gallery">
-    <img src="../imgs/item-4.jpg" alt="">
+    <img src="../shoes/item-4.jpg" alt="">
     <div class="desc">
         <h2>product name</h2>
         <p class="size">size <span>23</span></p>
@@ -90,7 +90,7 @@
   </div>
 
   <div class="gallery">
-    <img src="../imgs/item-6.jpg" alt="">
+    <img src="../shoes/item-6.jpg" alt="">
     <div class="desc">
         <h2>product name</h2>
         <p class="size">size <span>23</span></p>
@@ -105,7 +105,7 @@
   </div>
 
   <div class="gallery">
-    <img src="../imgs/item-8.jpg" alt="">
+    <img src="../shoes/item-8.jpg" alt="">
     <div class="desc">
         <h2>product name</h2>
         <p class="size">size <span>23</span></p>
@@ -120,7 +120,7 @@
   </div>
 
   <div class="gallery">
-    <img src="../imgs/item-13.jpg" alt="">
+    <img src="../shoes/item-13.jpg" alt="">
     <div class="desc">
         <h2>product name</h2>
         <p class="size">size <span>23</span></p>
@@ -135,7 +135,7 @@
   </div>
 
   <div class="gallery">
-    <img src="../imgs/item17.webp" alt="">
+    <img src="../shoes/item17.webp" alt="">
     <div class="desc">
         <h2>product name</h2>
         <p class="size">size <span>23</span></p>
@@ -150,7 +150,7 @@
   </div>
 
   <div class="gallery">
-    <img src="../imgs/Converse Mens Chuck 70 Plus Foundational Canvas A00915c Us M 6 - 9_5 Takse.jfif" alt="">
+    <img src="../shoes/Converse Mens Chuck 70 Plus Foundational Canvas A00915c Us M 6 - 9_5 Takse.jfif" alt="">
     <div class="desc">
         <h2>product name</h2>
         <p class="size">size <span>23</span></p>
